# aletheia-memory

./: .gitignore  CODE_REVIEW.md  README.md  aletheia_client.py  pyproject.toml
aletheia/: __init__.py  adapters.py  client.py  extraction.py  help.py  llm.py  ontology.py  plugins.py  review.py  semantic.py
docs/: Concept.md  M11_Embedding_Integration_contract.md  M11_M12_preface.md  M12_LLM_Integration_contract.md  Plan.md  adapter_developer_guide.md  aletheia_phased_plan.md  architecture.md  backup_restore_guide.md  cli_reference.md  core_concepts.md  encryption_layer.md  examples.md  http_api_reference.md  index.md  installation.md  integration_guide.md  interfaces.md  introduction.md  m0_MVP_contract.md  m10_federated_memory_contract.md  m1_reliable_recall_contract.md  m2_memory_integrity_contract.md  m3_Intelligent_Ingestion_Semantic_Recall_contract.md  m4_reasoned_memory_contract.md  m5_adaptive_memory_contract.md  m6_memory_service_contract.md  m7_observability_contract.md  m8_production_hardening_contract.md  m9_stable_platform_contract.md  mcp_reference.md  memory_lifecycle.md  migration_guide.md  near_future_changes.md  operations_guide.md  plugin_developer_guide.md  security_privacy_guide.md  troubleshooting.md  v1_3_0_baseline_remediation_plan.md  v1_3_0_postmortem_and_followups.md  (+2 more)
scripts/: live_m10_federated_memory_scorecard.py  live_m11_production_semantic_retrieval_scorecard.py  live_m12_governed_llm_memory_scorecard.py  live_m1_reliable_recall_scorecard.py  live_m2_memory_integrity_scorecard.py  live_m3_intelligent_ingestion_scorecard.py  (+9 more)
(+59 files in other folders)
